// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildrenComments renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChildrenComments
    comments={
        Array [
            Object {
              "createdAt": 1970-01-01T00:00:00.000Z,
              "createdBy": "user-id",
              "createdByName": "SomeUser",
              "id": "comment-id",
              "parentId": "story-id",
              "text": "comment",
            },
            Object {
              "createdAt": 1970-01-01T00:00:00.000Z,
              "createdBy": "user-id",
              "createdByName": "SomeUser",
              "id": "reply-id",
              "parentId": "comment-id",
              "text": "reply",
            },
          ]
    }
    level={0}
    parentId="story-id"
    storyId="story-id"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Comment
          createdAt={1970-01-01T00:00:00.000Z}
          createdBy="user-id"
          createdByName="SomeUser"
          id="comment-id"
          level={1}
          parentId="story-id"
          storyId="story-id"
          text="comment"
>
          <ReplyLink
                    commentId="comment-id"
                    level={1}
                    storyId="story-id"
          />
          <ChildrenComments
                    comments={
                              Array [
                                        Object {
                                          "createdAt": 1970-01-01T00:00:00.000Z,
                                          "createdBy": "user-id",
                                          "createdByName": "SomeUser",
                                          "id": "comment-id",
                                          "parentId": "story-id",
                                          "text": "comment",
                                        },
                                        Object {
                                          "createdAt": 1970-01-01T00:00:00.000Z,
                                          "createdBy": "user-id",
                                          "createdByName": "SomeUser",
                                          "id": "reply-id",
                                          "parentId": "comment-id",
                                          "text": "reply",
                                        },
                                      ]
                    }
                    level={1}
                    parentId="comment-id"
                    storyId="story-id"
          />
</Comment>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "comment-id",
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <ReplyLink
              commentId="comment-id"
              level={1}
              storyId="story-id"
/>,
            <ChildrenComments
              comments={
                            Array [
                                          Object {
                                            "createdAt": 1970-01-01T00:00:00.000Z,
                                            "createdBy": "user-id",
                                            "createdByName": "SomeUser",
                                            "id": "comment-id",
                                            "parentId": "story-id",
                                            "text": "comment",
                                          },
                                          Object {
                                            "createdAt": 1970-01-01T00:00:00.000Z,
                                            "createdBy": "user-id",
                                            "createdByName": "SomeUser",
                                            "id": "reply-id",
                                            "parentId": "comment-id",
                                            "text": "reply",
                                          },
                                        ]
              }
              level={1}
              parentId="comment-id"
              storyId="story-id"
/>,
          ],
          "createdAt": 1970-01-01T00:00:00.000Z,
          "createdBy": "user-id",
          "createdByName": "SomeUser",
          "id": "comment-id",
          "level": 1,
          "parentId": "story-id",
          "storyId": "story-id",
          "text": "comment",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "commentId": "comment-id",
              "level": 1,
              "storyId": "story-id",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "comments": Array [
                Object {
                  "createdAt": 1970-01-01T00:00:00.000Z,
                  "createdBy": "user-id",
                  "createdByName": "SomeUser",
                  "id": "comment-id",
                  "parentId": "story-id",
                  "text": "comment",
                },
                Object {
                  "createdAt": 1970-01-01T00:00:00.000Z,
                  "createdBy": "user-id",
                  "createdByName": "SomeUser",
                  "id": "reply-id",
                  "parentId": "comment-id",
                  "text": "reply",
                },
              ],
              "level": 1,
              "parentId": "comment-id",
              "storyId": "story-id",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Comment
            createdAt={1970-01-01T00:00:00.000Z}
            createdBy="user-id"
            createdByName="SomeUser"
            id="comment-id"
            level={1}
            parentId="story-id"
            storyId="story-id"
            text="comment"
>
            <ReplyLink
                        commentId="comment-id"
                        level={1}
                        storyId="story-id"
            />
            <ChildrenComments
                        comments={
                                    Array [
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "comment-id",
                                                  "parentId": "story-id",
                                                  "text": "comment",
                                                },
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "reply-id",
                                                  "parentId": "comment-id",
                                                  "text": "reply",
                                                },
                                              ]
                        }
                        level={1}
                        parentId="comment-id"
                        storyId="story-id"
            />
</Comment>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "comment-id",
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ReplyLink
                commentId="comment-id"
                level={1}
                storyId="story-id"
/>,
              <ChildrenComments
                comments={
                                Array [
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "comment-id",
                                                  "parentId": "story-id",
                                                  "text": "comment",
                                                },
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "reply-id",
                                                  "parentId": "comment-id",
                                                  "text": "reply",
                                                },
                                              ]
                }
                level={1}
                parentId="comment-id"
                storyId="story-id"
/>,
            ],
            "createdAt": 1970-01-01T00:00:00.000Z,
            "createdBy": "user-id",
            "createdByName": "SomeUser",
            "id": "comment-id",
            "level": 1,
            "parentId": "story-id",
            "storyId": "story-id",
            "text": "comment",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "commentId": "comment-id",
                "level": 1,
                "storyId": "story-id",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "comments": Array [
                  Object {
                    "createdAt": 1970-01-01T00:00:00.000Z,
                    "createdBy": "user-id",
                    "createdByName": "SomeUser",
                    "id": "comment-id",
                    "parentId": "story-id",
                    "text": "comment",
                  },
                  Object {
                    "createdAt": 1970-01-01T00:00:00.000Z,
                    "createdBy": "user-id",
                    "createdByName": "SomeUser",
                    "id": "reply-id",
                    "parentId": "comment-id",
                    "text": "reply",
                  },
                ],
                "level": 1,
                "parentId": "comment-id",
                "storyId": "story-id",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ChildrenComments renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChildrenComments
    comments={
        Array [
            Object {
              "createdAt": 1970-01-01T00:00:00.000Z,
              "createdBy": "user-id",
              "createdByName": "SomeUser",
              "id": "comment-id",
              "parentId": "story-id",
              "text": "comment",
            },
            Object {
              "createdAt": 1970-01-01T00:00:00.000Z,
              "createdBy": "user-id",
              "createdByName": "SomeUser",
              "id": "reply-id",
              "parentId": "comment-id",
              "text": "reply",
            },
          ]
    }
    level={1}
    parentId="comment-id"
    storyId="story-id"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <Comment
          createdAt={1970-01-01T00:00:00.000Z}
          createdBy="user-id"
          createdByName="SomeUser"
          id="reply-id"
          level={2}
          parentId="comment-id"
          storyId="story-id"
          text="reply"
>
          <ReplyLink
                    commentId="reply-id"
                    level={2}
                    storyId="story-id"
          />
          <ChildrenComments
                    comments={
                              Array [
                                        Object {
                                          "createdAt": 1970-01-01T00:00:00.000Z,
                                          "createdBy": "user-id",
                                          "createdByName": "SomeUser",
                                          "id": "comment-id",
                                          "parentId": "story-id",
                                          "text": "comment",
                                        },
                                        Object {
                                          "createdAt": 1970-01-01T00:00:00.000Z,
                                          "createdBy": "user-id",
                                          "createdByName": "SomeUser",
                                          "id": "reply-id",
                                          "parentId": "comment-id",
                                          "text": "reply",
                                        },
                                      ]
                    }
                    level={2}
                    parentId="reply-id"
                    storyId="story-id"
          />
</Comment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": "reply-id",
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <ReplyLink
              commentId="reply-id"
              level={2}
              storyId="story-id"
/>,
            <ChildrenComments
              comments={
                            Array [
                                          Object {
                                            "createdAt": 1970-01-01T00:00:00.000Z,
                                            "createdBy": "user-id",
                                            "createdByName": "SomeUser",
                                            "id": "comment-id",
                                            "parentId": "story-id",
                                            "text": "comment",
                                          },
                                          Object {
                                            "createdAt": 1970-01-01T00:00:00.000Z,
                                            "createdBy": "user-id",
                                            "createdByName": "SomeUser",
                                            "id": "reply-id",
                                            "parentId": "comment-id",
                                            "text": "reply",
                                          },
                                        ]
              }
              level={2}
              parentId="reply-id"
              storyId="story-id"
/>,
          ],
          "createdAt": 1970-01-01T00:00:00.000Z,
          "createdBy": "user-id",
          "createdByName": "SomeUser",
          "id": "reply-id",
          "level": 2,
          "parentId": "comment-id",
          "storyId": "story-id",
          "text": "reply",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "commentId": "reply-id",
              "level": 2,
              "storyId": "story-id",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "comments": Array [
                Object {
                  "createdAt": 1970-01-01T00:00:00.000Z,
                  "createdBy": "user-id",
                  "createdByName": "SomeUser",
                  "id": "comment-id",
                  "parentId": "story-id",
                  "text": "comment",
                },
                Object {
                  "createdAt": 1970-01-01T00:00:00.000Z,
                  "createdBy": "user-id",
                  "createdByName": "SomeUser",
                  "id": "reply-id",
                  "parentId": "comment-id",
                  "text": "reply",
                },
              ],
              "level": 2,
              "parentId": "reply-id",
              "storyId": "story-id",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <Comment
            createdAt={1970-01-01T00:00:00.000Z}
            createdBy="user-id"
            createdByName="SomeUser"
            id="reply-id"
            level={2}
            parentId="comment-id"
            storyId="story-id"
            text="reply"
>
            <ReplyLink
                        commentId="reply-id"
                        level={2}
                        storyId="story-id"
            />
            <ChildrenComments
                        comments={
                                    Array [
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "comment-id",
                                                  "parentId": "story-id",
                                                  "text": "comment",
                                                },
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "reply-id",
                                                  "parentId": "comment-id",
                                                  "text": "reply",
                                                },
                                              ]
                        }
                        level={2}
                        parentId="reply-id"
                        storyId="story-id"
            />
</Comment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": "reply-id",
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <ReplyLink
                commentId="reply-id"
                level={2}
                storyId="story-id"
/>,
              <ChildrenComments
                comments={
                                Array [
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "comment-id",
                                                  "parentId": "story-id",
                                                  "text": "comment",
                                                },
                                                Object {
                                                  "createdAt": 1970-01-01T00:00:00.000Z,
                                                  "createdBy": "user-id",
                                                  "createdByName": "SomeUser",
                                                  "id": "reply-id",
                                                  "parentId": "comment-id",
                                                  "text": "reply",
                                                },
                                              ]
                }
                level={2}
                parentId="reply-id"
                storyId="story-id"
/>,
            ],
            "createdAt": 1970-01-01T00:00:00.000Z,
            "createdBy": "user-id",
            "createdByName": "SomeUser",
            "id": "reply-id",
            "level": 2,
            "parentId": "comment-id",
            "storyId": "story-id",
            "text": "reply",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "commentId": "reply-id",
                "level": 2,
                "storyId": "story-id",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "comments": Array [
                  Object {
                    "createdAt": 1970-01-01T00:00:00.000Z,
                    "createdBy": "user-id",
                    "createdByName": "SomeUser",
                    "id": "comment-id",
                    "parentId": "story-id",
                    "text": "comment",
                  },
                  Object {
                    "createdAt": 1970-01-01T00:00:00.000Z,
                    "createdBy": "user-id",
                    "createdByName": "SomeUser",
                    "id": "reply-id",
                    "parentId": "comment-id",
                    "text": "reply",
                  },
                ],
                "level": 2,
                "parentId": "reply-id",
                "storyId": "story-id",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Empty renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChildrenComments
    comments={Array []}
    level={0}
    parentId="story-id"
    storyId="story-id"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
